--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@tweakpane/plugin-essentials": "^0.1.3",
     "canvas-sketch": "^0.7.4",
     "canvas-sketch-util": "^1.10.0",
-    "ffmpeg-static": "^4.4.0"
+    "color-interpolate": "^1.0.5",
+    "ffmpeg-static": "^4.4.0",
+    "tweakpane": "^3.0.5"
   },
   "devDependencies": {
     "canvas-sketch-cli": "^1.11.14"
