--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "canvas-sketch-util": "^1.10.0",
     "color-interpolate": "^1.0.5",
     "ffmpeg-static": "^4.4.0",
+    "http-server": "^13.0.2",
     "tweakpane": "^3.0.5"
   },
   "devDependencies": {
